adds delay duration waiting before changing line in preview

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,8 @@ textarea, textarea:focus {
     box-shadow: none !important;
     -webkit-box-shadow: none !important;
 }
+
+textarea:disabled {
+    background-color: inherit !important;
+    opacity: inherit !important;
+}
