adds slider and line settings popover

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ textarea:disabled {
     background-color: inherit !important;
     opacity: inherit !important;
 }
+
+textarea.form-control {
+    color: black;
+}
+
+.w-90 {
+    width: 90% !important;
+}
