--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,3 +1,7 @@
+* {
+    z-index: 3;
+}
+
 .editor-bar {
     position: fixed;
     height: 100%;
@@ -10,4 +14,16 @@
     left: 25%;
     width: 75%;
     position: relative;
+    z-index: 2;
+}
+
+.popover-box {
+    position: relative;
+    left: 105%;
+    width: 250%;
+    z-index: 3;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5) !important;
+    background-color: white;
+    border: 1px solid #0000003d;
+    border-radius: 4px;
 }
