--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html,body,#root {
 }
 
 
-textarea, textarea:focus {
+textarea, textarea:focus, .titleform {
     resize: none !important;
     appearance: none !important;
     -webkit-appearance: none !important;
@@ -11,6 +11,11 @@ textarea, textarea:focus {
     outline: none !important;
     box-shadow: none !important;
     -webkit-box-shadow: none !important;
+    font-size: 1.2em !important;
+}
+
+.titleform {
+    font-size: 2.5em !important;
 }
 
 textarea:disabled {
